tdf#160202 - Don't extend selection over two words

Don't extend the selection over two separate string in the BASIC editor.
Probably, the BreakIteratorImpl::nextWord needs to be corrected which could lead to unwanted side effects.

Change-Id: I0e980006cca672fb63216dc860c12a7004bfd759
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173900
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins
(cherry picked from commit 489613b93846d77a8ee33f5069f079c59dee563b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174327
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>